@@ -20,10 +20,11 @@ package org.apache.sling.caconfig.management.impl.console;
 
 import java.io.PrintWriter;
 import java.io.StringWriter;
+import java.util.List;
+import java.util.Set;
+import java.util.TreeSet;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSortedSet;
-import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.felix.inventory.Format;
 import org.apache.sling.caconfig.impl.ConfigurationTestUtils;
 import org.apache.sling.caconfig.impl.def.DefaultConfigurationInheritanceStrategy;
@@ -69,7 +70,7 @@ public class CAConfigInventoryPrinterTest {
 
         ConfigurationMetadata configMetadata = new ConfigurationMetadata(
                 SAMPLE_CONFIG_NAME,
-                ImmutableList.<PropertyMetadata<?>>of(
+                List.<PropertyMetadata<?>>of(
                         new PropertyMetadata<>("prop1", "defValue"),
                         new PropertyMetadata<>("prop2", String.class),
                         new PropertyMetadata<>("prop3", 5)),
@@ -77,9 +78,9 @@ public class CAConfigInventoryPrinterTest {
         when(configurationMetadataProvider.getConfigurationMetadata(SAMPLE_CONFIG_NAME))
                 .thenReturn(configMetadata);
         when(configurationMetadataProvider.getConfigurationNames())
-                .thenReturn(ImmutableSortedSet.of(SAMPLE_CONFIG_NAME));
+                .thenReturn(new TreeSet<>(Set.of(SAMPLE_CONFIG_NAME)));
 
-        when(configurationOverrideProvider.getOverrideStrings()).thenReturn(ImmutableList.of(SAMPLE_OVERRIDE_STRING));
+        when(configurationOverrideProvider.getOverrideStrings()).thenReturn(List.of(SAMPLE_OVERRIDE_STRING));
     }
 
     @Test
@@ -89,13 +90,13 @@ public class CAConfigInventoryPrinterTest {
         String result = sw.toString();
 
         // test existance of some strategy names
-        assertTrue(StringUtils.contains(result, DefaultConfigurationInheritanceStrategy.class.getName()));
-        assertTrue(StringUtils.contains(result, DefaultConfigurationPersistenceStrategy.class.getName()));
+        assertTrue(Strings.CS.contains(result, DefaultConfigurationInheritanceStrategy.class.getName()));
+        assertTrue(Strings.CS.contains(result, DefaultConfigurationPersistenceStrategy.class.getName()));
 
         // ensure config metadata
-        assertTrue(StringUtils.contains(result, SAMPLE_CONFIG_NAME));
+        assertTrue(Strings.CS.contains(result, SAMPLE_CONFIG_NAME));
 
         // ensure overrides strings
-        assertTrue(StringUtils.contains(result, SAMPLE_OVERRIDE_STRING));
+        assertTrue(Strings.CS.contains(result, SAMPLE_OVERRIDE_STRING));
     }
 }
